[package]
edition = "2021"
name = "napi-rs_test-rust"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.2", default-features = false, features = ["napi4", "async"] }
napi-derive = "2.12.2"
tokio = { version = "1.34.0", features = ["full"]}
futures = "0.3.29"

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
